--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "parcel": "^2.7.0"
   },
   "name": "parcel-project",
-  "source": "src/index.html",
+  "source": "index.html",
   "version": "1.0.0",
   "description": "search app",
   "main": "index.js",
